# exostriker

./: ..gitignore.swp  .HIP5364_feros_RV.vels.swp  .RV_curve.swp  .geninit_j.in.swp  .gitignore  .gitignore~  .pyproject.toml.swp  .startup.py  .temp_.temp_hip88048.vels  .temp_.temp_hip88048_crires.vels  .temp_new_HIP5364_chiron.vels  .test.tex.kate-swp  .~lock.focus_matrix_TBFixed.doc#  CITATION.cff  Kep_input  LICENSE  MAC_OS_install.sh  MANIFEST.in  README.md  README.md~  README_for_instalation  README_for_installation  README_for_installation.md  README_install.md  RV_mod.py  RVmod session_py2.ses.REMOVED.git-id  RVmod session_py3.ses.REMOVED.git-id  RVmod.ses.REMOVED.git-id  RVmod_as_py_lib_example.py  RVmod_as_py_lib_example_1.py  RVmod_as_py_lib_example_2.py  TTTTT  WASP_6_lc.dat.REMOVED.git-id  anaconda_install.sh  best_fit.tex  check_your_system_MAC_OS.sh  check_your_system_anaconda_install.sh  check_your_system_linux_OpenSuse.sh  check_your_system_linux_debian.sh  conf.py  (+35 more)
Notebook_and_script_examples/: Eta_Ceti_py2.ses  Eta_Ceti_py3.ses  Make_plots_from_ses.py  RVmod_as_py_lib_auto_fit_example.py  RVmod_as_py_lib_kep_vs_dyn_example.ipynb  RVmod_as_py_lib_kep_vs_dyn_example.py  eta_Ceti_system.init  run_scripts_in_servers_NestSamp.py
datafiles/: GJ1148_NIR_soft_Sep.vels  GJ388.rvc.vels  GJ656_harps_post-drs.vels  GJ656_harps_post_serval-mlc.vels  GJ656_harps_pre-drs.vels  GJ656_harps_pre_serval-mlc.vels  GJ699_harps-drs.vels  GJ699_harps_av-drs.vels  GJ699_harps_av-serval.vels  GJ_1148_HIRES.avc.vels  HD181433_harps.vels  HD181433_harps_post-serval.vels  (+39 more)
(+679 files in other folders)
